--- a/DeviceSettings/res/values/strings.xml
+++ b/DeviceSettings/res/values/strings.xml
@@ -33,4 +33,9 @@
 
     <string name="cabc_title_head">CABC</string>
     <string name="cabc_summary_head">Enable content adaptive backlight control</string>
+
+    <string name="category_sound_title">Sound</string>
+    <string name="sound_volume_title">Volume</string>
+    <string name="voc_ep_xgain_title_head">Extra gain in voice calls</string>
+    <string name="voc_ep_xgain_summary_head">Boost volume of earpiece during voice calls</string>
 </resources>
