--- a/DeviceSettings/res/values/strings.xml
+++ b/DeviceSettings/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string>
     <string name="touchkey_bln_title_head">Enable keys notifications</string>
     <string name="touchkey_bln_summary_head">Light up touch keys when screen is off, and a notification is received</string>
+    <string name="keyboard_light_title_head">Enable keyboard backlight</string>
+    <string name="keyboard_light_summary_head">Light up keyboard backlight when screen is on</string>
 
     <string name="cabc_title_head">CABC</string>
     <string name="cabc_summary_head">Enable content adaptive backlight control</string>
