--- a/DeviceSettings/res/values/strings.xml
+++ b/DeviceSettings/res/values/strings.xml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="app_name">Advanced settings</string>
+<!-- Copyright (C) 2012-2013 The CyanogenMod Project
 
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+ -->
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_name">Advanced settings</string>
     <string name="screen_colors_title">Colors</string>
     <string name="category_mdnie_title">Screen</string>
     <string name="mdnie_scenario_title_head">Scenario</string>
@@ -16,11 +29,9 @@
     <string name="panel_gamma_summary_head">Set screen gamma value</string>
     <string name="panel_color_temp_title_head">Screen color temperature</string>
     <string name="panel_color_temp_summary_head">Turn screen off and back on to activate</string>
-
     <string name="touchscreen_subcat_title">Touchscreen</string>
     <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
     <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
-
     <string name="category_sensors_title">Sensors</string>
     <string name="gyro_subcat_title">Gyroscope</string>
     <string name="use_gyro_calibration_title_head">Use calibration data</string>
@@ -34,15 +45,12 @@
     <string name="touchkey_bln_summary_head">Light up touch keys when screen is off, and a notification is received</string>
     <string name="keyboard_light_title_head">Enable keyboard backlight</string>
     <string name="keyboard_light_summary_head">Light up keyboard backlight when screen is on</string>
-
     <string name="cabc_title_head">CABC</string>
     <string name="cabc_summary_head">Enable content adaptive backlight control</string>
-
     <string name="category_haptic_title">Haptic</string>
     <string name="vibrator_subcat_title">Vibrator</string>
     <string name="vibrator_intensity_title_head">Vibrator Intensity</string>
     <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>
-
     <string name="category_sound_title">Sound</string>
     <string name="sound_volume_title">Volume</string>
     <string name="voc_ep_xgain_title_head">Extra gain in voice calls</string>
