--- a/DeviceSettings/res/values-es/strings.xml
+++ b/DeviceSettings/res/values-es/strings.xml
@@ -15,6 +15,7 @@
  -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Ajustes avanzados</string>
+    <string name="defaults_button">Restablecer</string>
     <string name="screen_colors_title">Colores</string>
     <string name="category_mdnie_title">Pantalla</string>
     <string name="mdnie_scenario_title_head">Escenario</string>
@@ -48,9 +49,10 @@
     <string name="cabc_title_head">Brillo adaptativo</string>
     <string name="cabc_summary_head">Activar el control de brillo adaptado al contenido</string>
     <string name="category_haptic_title">Háptica</string>
-    <string name="vibrator_subcat_title">Vibración</string>
-    <string name="vibrator_intensity_title_head">Intensidad de vibración</string>
-    <string name="vibrator_intensity_summary_head">Establecer la intensidad de vibración</string>
+    <string name="vibrator_title">Vibración</string>
+    <string name="vibrator_tuning_title">Intensidad de vibración</string>
+    <string name="vibrator_tuning_summary_head">Establecer la intensidad de vibración</string>
+    <string name="vibrator_warning">No son recomendables valores mayores de %1$d</string>
     <string name="category_sound_title">Sonido</string>
     <string name="sound_volume_title">Volumen</string>
     <string name="voc_ep_xgain_title_head">Ganancia extra en llamadas</string>
