--- a/DeviceSettings/res/values/strings.xml
+++ b/DeviceSettings/res/values/strings.xml
@@ -15,6 +15,7 @@
  -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Advanced settings</string>
+    <string name="defaults_button">Reset to default</string>
     <string name="screen_colors_title">Colors</string>
     <string name="category_mdnie_title">Screen</string>
     <string name="mdnie_scenario_title_head">Scenario</string>
@@ -48,9 +49,10 @@
     <string name="cabc_title_head">CABC</string>
     <string name="cabc_summary_head">Enable content adaptive backlight control</string>
     <string name="category_haptic_title">Haptic</string>
-    <string name="vibrator_subcat_title">Vibrator</string>
-    <string name="vibrator_intensity_title_head">Vibrator Intensity</string>
-    <string name="vibrator_intensity_summary_head">Set vibrator intensity</string>
+    <string name="vibrator_title">Vibrator</string>
+    <string name="vibrator_tuning_title">Vibration strength</string>
+    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
+    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>
     <string name="category_sound_title">Sound</string>
     <string name="sound_volume_title">Volume</string>
     <string name="voc_ep_xgain_title_head">Extra gain in voice calls</string>
